--- a/iAngel/app.css
+++ b/iAngel/app.css
@@ -1,5 +1,20 @@
 ﻿body {
     font-family: 'Segoe UI', sans-serif;
+    background:rgb(128, 128, 128);
+    min-height:800px;
+}
+.book {
+    background:white;
+    padding-bottom:30px;
+    box-shadow:0px 5px 5px 3px rgba(0, 0, 0, 0.8);
+    height:500px;
+}
+
+h1 {
+    background:#212c87;
+    padding:10px;
+    color:white;
+    box-shadow:5px 2px 5px 0 rgba(0, 0, 0, 0.8)
 }
 
 span {
